✨ add 2 person voice

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div id="online-users">
           <span id="user-count">0 users online</span>
         </div>
+        <button id="mute-btn" class="control-btn" title="Toggle Mute">
+          <span id="mute-icon">🎤</span>
+        </button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
