--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Virtual Office</title>
+    <title>Huddle</title>
   </head>
   <body>
     <div id="app">
       <div id="login-screen">
         <div class="login-card">
-          <h1>🏢 Virtual Office</h1>
+          <h1>💬 Huddle</h1>
           <p>Enter the office and connect with your team</p>
           <div id="welcome-back" style="display: none;"></div>
           <input
